--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "date-and-time": "^4.1.1",
     "discord.js": "^14.23.2",
     "dotenv": "^17.2.3",
     "playwright": "^1.56.1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "concurrency": "^0.1.4",
     "concurrently": "^9.2.1"
   }
