using one-time check for main program instead

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,1 @@
-token = abcdefg #self explanatory
-channelId = 123 #right click the discord channel where you want to add the notification -> copy channel id
-interval = 30 #minutes
+INTERVAL = 30 #minutes
