--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npx tsx main.ts"
+    "start": "npx tsx main.ts",
+    "start_auto": "npx tsx automated_main.ts"
   },
   "keywords": [],
   "author": "",
