--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/node": "^25.0.10",
     "concurrency": "^0.1.4",
-    "concurrently": "^9.2.1"
+    "concurrently": "^9.2.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
